@@ -41,15 +41,12 @@ metadata:
     kubernetes.io/cluster-service: "true"
 data:
   kubernetes.yml: |-
-    - type: log
-      paths:
-        - /var/lib/docker/containers/*/*.log
-      json.message_key: log
-      json.keys_under_root: true
+    - type: docker
+      containers.ids:
+      - "*"
       processors:
         - add_kubernetes_metadata:
             in_cluster: true
-            namespace: ${POD_NAMESPACE}
 ---
 apiVersion: extensions/v1beta1
 kind: DaemonSet
@@ -88,10 +85,6 @@ spec:
           value:
         - name: ELASTIC_CLOUD_AUTH
           value:
-        - name: POD_NAMESPACE
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.namespace
         securityContext:
           runAsUser: 0
         resources:
